[metadata]
name = conftext
version = attr: conftext.__version__
url = https://gitlab.dev.beat.no/backend/conftext
description = conftext - helper for managing configuration contexts
long_description = file: README.rst
author = Øystein S. Haaland
author_email = oystein@beat.no

[options]
packages = conftext
install_requires = 
    invoke
    pydantic

[options.entry_points]
console_scripts =
    conftext = conftext:program.run

conftext =
    default = conftext:MultiTenant

[options.extras_require]
dev =
    twine
    pytest
    pytest-regtest
